--- a/microservices_MongoAtlas_RWR/package.json
+++ b/microservices_MongoAtlas_RWR/package.json
@@ -12,6 +12,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^5.11.17",
-    "socket.io": "^4.0.1"
+    "socket.io-client": "^4.0.1"
   }
 }
